# RGBD_SLAM

./: CMakeLists.txt  README.md
GT/: office3_gt.txt
app/: CMakeLists.txt  main.cpp
config/: default.yaml  f1_desk.yaml  f2_desk.yaml  snu_34.yaml  snu_lib_rect.yaml
include/: Config.h
include/core/: Estimator.h  Extractor.h  Frontend.h  Matcher.h  Optimizer.h  PoseGraphOptimizer.h  Tracker.h
include/factor/: BetweenFactor.h  OdometryFactor.h  ProjectionFactor.h
include/types/: Camera.h  Common.h  Feature.h  Frame.h  Map.h  MapPoint.h
include/utils/: PointCloudUtils.h  Viewer.h
script/: associate.py  read_bag.py
src/: CMakeLists.txt  Config.cpp
src/core/: Estimator.cpp  Extractor.cpp  Frontend.cpp  Matcher.cpp  Optimizer.cpp  PoseGraphOptimizer.cpp  Tracker.cpp
src/types/: Camera.cpp  Feature.cpp  Frame.cpp  Map.cpp  MapPoint.cpp
src/utils/: PointCloudUtils.cpp  Viewer.cpp
